# django-ask-company

./: .gitignore  README.md  pyproject.toml
askcompany/accounts/: admin.py  models.py
askcompany/accounts/migrations/: 0001_initial.py
askcompany/askcompany/: settings.py  urls.py
askcompany/instagram/: admin.py  models.py  urls.py  views.py
askcompany/instagram/migrations/: 0001_initial.py  0002_auto_20220116_1538.py  0003_post_author.py  0004_auto_20220122_0719.py
askcompany/instagram/templates/instagram/: post_list.html
