[tool.poetry]
name = "django-ask-company"
version = "0.1.0"
description = ""
authors = ["Changmin Lee <ckdals8073@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.0"
Django = "~=3.0.0"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
